AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

#SUBDIRS = doc src demo tutorial tvhc
#SUBDIRS = lib demo tutorial doc tvhc
SUBDIRS = lib mymc tutorial doc tvhc

CLEANFILES = *~

EXTRA_DIST = Announce COPYRIGHT color-xterm.ti myendian.h

#CXXFLAGS=-g -O2 -std=c++98
#TODO: Make this work:
CXXFLAGS=-g -O2 -w -std=c++03

